<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_row_transaction_shopping_bag_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_shopping_bag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_row_transaction_shopping"
            style="@style/TransactionShoppingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping"
            app:layout_constraintStart_toEndOf="@+id/iv_row_transaction_shopping_bag_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_row_transaction_shopping_bag_icon"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_row_transaction_shopping_date"
            style="@style/TransactionDateTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_date"
            app:layout_constraintStart_toEndOf="@+id/iv_row_transaction_shopping_bag_icon"
            app:layout_constraintTop_toBottomOf="@+id/tv_row_transaction_shopping"
            tools:ignore="SmallSp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_row_transaction_shopping_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/transaction_status_container"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/transparent">

            <TextView
                android:id="@+id/tv_row_transaction_shopping_status"
                style="@style/TransactionStatusTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping_status"
                tools:ignore="SmallSp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/d_row_transaction_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_row_transaction_shopping_bag_icon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_row_transaction_product_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/iv_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d_row_transaction_divider"
            app:shapeAppearanceOverlay="@style/RoundImageViewProductImageStyle"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_row_transaction_product_name"
            style="@style/TransactionProductNameTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_row_transaction_product_image"
            app:layout_constraintTop_toTopOf="@+id/iv_row_transaction_product_image" />

        <TextView
            android:id="@+id/tv_row_transaction_shopping_quantity"
            style="@style/TransactionShoppingQuantityTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shopping_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_row_transaction_product_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_row_transaction_product_name"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_row_transaction_total_expenditure"
            style="@style/TransactionTotalExpenditureTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_expenditure"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_row_transaction_product_image"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_row_transaction_total_expenditure_price"
            style="@style/TransactionTotalExpenditurePriceTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_expenditure_price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_row_transaction_total_expenditure" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_row_transaction_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            app:cardBackgroundColor="@color/light_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="@color/transparent">

            <TextView
                android:id="@+id/tv_row_transaction_review"
                style="@style/TransactionReviewTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping_review" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>